css overflow issues solved

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     margin: 0;
 }
 header {
-    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,7 +21,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
+  
     
 }
 .logo {
@@ -40,7 +39,7 @@ header {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
     font-size: 30px;
-    left: 40vw;
+  
 }
 .whatsapp-section-top {
     width: 33vw;
@@ -56,21 +55,23 @@ header {
 .whatsapp {
     color: #ffffff8a;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 22px;
     font-weight: 100;
     padding-left: 10px;
     margin: 0;
 }
 .navigation-bar {
     background-color: #ffffff47;
-    width: 100vw;
     display: flex;
     justify-content: space-around;
     list-style: none;
     font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 14px;
-    margin-top: 0px;
+    font-size: 18px;
+    margin: 0;
     padding-left: 0;
     box-shadow: rgba(0, 0, 0, 0.533) 0px 1px 4px;
+    position: relative;
+    z-index: 1;
 }
 .navigation-bar li a {
     text-decoration: none;
@@ -84,13 +85,13 @@ header {
     background-color: #ffffff70;
 }
 .slider-box {
-    width: 100vw;
-    margin-top: -13px;
+    display: flex;
+    justify-content: center;
 }
 .slider {
     width: 60vw;
     overflow: hidden;
-    margin-left: 20%;
+    
 }
 .slides {
     display: flex;
@@ -103,6 +104,7 @@ header {
 }
 .slide img {
     width: 60vw;
+    height: 100%;
 }
 .navigation-manual {
     position: absolute;
@@ -258,7 +260,6 @@ header {
 }
 
 .pain {
-    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -267,7 +268,6 @@ header {
 .pain-header {
     background-color: #869bc3;
     padding: 1px;
-    width: 100vw;
     display: flex;
     justify-content: center;
 }
@@ -305,7 +305,6 @@ header {
 .whatsapp-section {
     display: flex;
     justify-content: center;
-    width: 100vw;
     background-color: #869bc3;
     margin-top: 220px;
 }
